html and css done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Generate a <br><span>Strong Password</span></h1>
+        <div class="box">
+            <input type="text" id="password" placeholder="Password">
+            <img src="images/copy.png" alt="loading">
+          
+            </div>
+            <button class="btn">
+                <img src="images/generate.png" alt="loading..">
+                Generate Password</button>
+    </div>
 </body>
 </html>
