--- a/index.html
+++ b/index.html
@@ -14,9 +14,37 @@
             <img src="images/copy.png" alt="loading">
           
             </div>
-            <button class="btn">
+            <button  onClick="createPassword()" class="btn">
                 <img src="images/generate.png" alt="loading..">
                 Generate Password</button>
     </div>
+
+    <script>
+        const passwordBox = document.getElementById("password");
+
+        const length = 12;
+        const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        const lowerCase = "abcdefghijklmnopqrstuvwxyz";
+        const num = "0123456789";
+        const symbol= "!@#$%^&*()_+{}[]\/?><=";
+
+        const allChars = upperCase + lowerCase + num + symbol;
+
+        function createPassword(){
+            let password = "";
+            password += upperCase[Math.floor(Math.random()* upperCase.length)];
+            password += lowerCase[Math.floor(Math.random()* lowerCase.length)];
+            password += num[Math.floor(Math.random()* num.length)];
+            password += symbol[Math.floor(Math.random()* symbol.length)];
+
+            while(length > password.length){
+                password += allChars[Math.floor(Math.random()* allChars.length)];
+            }
+
+            passwordBox.value = password;
+        }
+
+
+    </script>
 </body>
 </html>
